--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>测试页面</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <h1>这只是一个测试页面</h1>
